--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tauri-app",
+  "name": "wav-markers",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -12,7 +12,7 @@
   "dependencies": {
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2",
-    "@tauri-apps/plugin-shell": "^2",
+    "@tauri-apps/plugin-shell": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
