cpp: file moves

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
       //   "000.wav",
       //   "142222,711111,1280000,1848889,2702222,4266667"
       // ]
-      "args": ["-a", "aud/mkrs_track.wav"]
+      "args": ["-a", "aud/000.wav"]
     }
   ]
 }
