--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "WAVMarkers"
+name = "wavslice"
 version = "0.1.0"
 description = "Add QLab-compatible slices to WAV files from Pro Tools or MIDI versions."
 authors = ["hingobway"]
