--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,13 +16,9 @@
         }
       ],
       "externalConsole": true,
-      // "args": [
-      //   "-w",
-      //   "aud/mkrs_track.wav",
-      //   "000.wav",
-      //   "142222,711111,1280000,1848889,2702222,4266667"
-      // ]
-      "args": ["-a", "aud/000.wav"]
+      // "args": ["-w", "aud/mkrs_track.wav", "000.wav", "106666,391111,1813333,2666667,4231112,4800001,7217780,7786669,8355558"]
+      "args": ["-a", "000.wav"]
+      // "args": ["-m", "aud/single.mid", "48000"]
     }
   ]
 }
