--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.28",
     "@fontsource/atkinson-hyperlegible": "^5.1.0",
+    "@headlessui/react": "^2.2.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-shell": "^2.0.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.460.0",
+    "mime": "^4.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
+    "@types/node": "^22.9.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.1",
