--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,9 @@
     "noFallthroughCasesInSwitch": true,
 
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src-tsx/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src-tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
