--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build:
     runs-on: macos-latest
+    permissions:
+      contents: write
     steps:
       # prepare codebase
       - uses: actions/checkout@v4.1.6
