--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           cache: 'pnpm'
       - name: install brew packages
-        run: brew install rust cmake libsndfile
+        run: brew install rust cmake libsndfile boost
 
       # cmake build
       - name: dependencies
