--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "@headlessui/react": "^2.2.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-fs": "~2",
+    "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-shell": "^2.0.1",
+    "@tauri-apps/plugin-upload": "~2",
+    "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
+    "csv-parse": "^5.6.0",
     "lucide-react": "^0.460.0",
     "mime": "^4.0.4",
     "react": "^18.2.0",
