initial setup for dawtool
- parse.py runs dawtool
- built py build into cmake

--- a/src-cpp/CMakeLists.txt
+++ b/src-cpp/CMakeLists.txt
@@ -53,3 +53,40 @@ target_link_libraries(${TARGET_NAME}
 
   # Boost::locale
 )
+
+# PYTHON BUILD
+
+# python source files
+set(PYTHON_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../src-py")
+set(PYTHON_BIN_FILE "${PYTHON_SRC_DIR}/out/parse.bin")
+set(PYTHON_FINAL_BIN_LOC "${CMAKE_CURRENT_SOURCE_DIR}/../src-tauri/bin/dawtool-${RUST_HOST}")
+file(GLOB_RECURSE PYTHON_SOURCES "${PYTHON_SRC_DIR}/src/*.py")
+
+# setup environment
+message(STATUS "Setting up python...")
+execute_process(
+  COMMAND bash build_setup.sh
+  WORKING_DIRECTORY ${PYTHON_SRC_DIR}
+)
+
+# build python script to binary
+add_custom_command(
+  OUTPUT ${PYTHON_BIN_FILE}
+  DEPENDS ${PYTHON_SOURCES}
+  WORKING_DIRECTORY ${PYTHON_SRC_DIR}
+  COMMAND bash build.sh
+  COMMENT "Building python binary"
+)
+
+# copy to bundle directory
+add_custom_command(
+  OUTPUT ${PYTHON_FINAL_BIN_LOC}
+  DEPENDS ${PYTHON_BIN_FILE}
+  COMMAND ${CMAKE_COMMAND} -E copy
+  ${PYTHON_BIN_FILE} ${PYTHON_FINAL_BIN_LOC}
+  COMMENT "Copying Python binary to bundle"
+)
+
+add_custom_target(build_python ALL
+  DEPENDS ${PYTHON_FINAL_BIN_LOC}
+)
