--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@floating-ui/react": "^0.26.28",
     "@fontsource/atkinson-hyperlegible": "^5.1.0",
     "@headlessui/react": "^2.2.0",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-dialog": "~2",
-    "@tauri-apps/plugin-fs": "~2",
-    "@tauri-apps/plugin-http": "~2",
-    "@tauri-apps/plugin-shell": "^2.0.1",
+    "@tauri-apps/api": "^2.10.1",
+    "@tauri-apps/plugin-dialog": "^2.6.0",
+    "@tauri-apps/plugin-fs": "^2.4.5",
+    "@tauri-apps/plugin-http": "^2.5.7",
+    "@tauri-apps/plugin-shell": "^2.3.5",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
-    "@tauri-apps/cli": "^2",
+    "@tauri-apps/cli": "^2.10.0",
     "@types/node": "^22.9.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
