--- a/src-cpp/CMakeLists.txt
+++ b/src-cpp/CMakeLists.txt
@@ -7,6 +7,7 @@ project(wavslice VERSION 0.3.4)
 set(PROGRAM_NAME "markers")
 
 # PACKAGE INCLUDE
+set(CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_STATIC_LIBRARY_SUFFIX})
 find_package(SndFile CONFIG REQUIRED)
 include(include/midifile.cmake)
 
